<resources>
    <string name="app_name">android lab7</string>

    <string name="Button_Text">Login</string>
    <string name="entermsg">Enter your email address</string>
    <string name="Email_hint">Type Email here</string>
    <string name="passwordtxt">Type your password:</string>
    <string name="your_profile">your profile</string>
    <string name="your_name">your name</string>
    <string name="name_field">Enter your name</string>
    <string name="your_Email">your_Email</string>
    <string name="Your_Picture">Your Picture</string>
    <string name="takeImg">Click the button above to take a picture</string>
    <string name="gotoChat">Go to chat</string>
    <string name="TypeHere">Type Here</string>
    <string name="receiveBtn_Text">RECEIVE</string>
    <string name="gotoWeatherForcast">Go To Weather Forcast</string>
    <string name="max">Today\'s max temperature is</string>
    <string name="min">\"Today\'s minimum temperature is \"</string>
    <string name="uv">\"UV rate is \"</string>
    <string name="temp">Current teperature:</string>
    <string name="sendBtn_Text">send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="isRecievedMSG" translatable="false">Is a RECEIVED message</string>
    <string name="hide">Hide</string>
</resources>