<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"
    tools:context=".ProfileActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_profile"
       />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:id="@+id/nameTV"/>
    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_field"
        android:inputType="textPersonName"
        android:nextFocusDown="@id/Email_et"
        android:nextFocusUp="@id/nameTV"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_Email"/>
    <EditText
        android:id="@+id/Email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email_hint"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/imgBtn"
        android:nextFocusUp="@id/name_et"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Your_Picture"/>

    <ImageButton
        android:id="@+id/imgBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nextFocusDown="@id/goToChat"
        android:nextFocusUp="@id/Email_et"
        android:src="@android:drawable/picture_frame"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/takeImg"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gotoChat"
        android:id="@+id/goToChat"
        android:nextFocusDown="@id/goToWeaBTN"
        android:nextFocusUp="@id/imgBtn"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gotoWeatherForcast"
        android:id="@+id/goToWeaBTN"/>

</LinearLayout>